--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gh-pages": "^6.1.1",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
+    "svelte-routing": "^2.12.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
