--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "gh-pages": "^6.1.1",
+    "sass": "^1.80.3",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
     "svelte-routing": "^2.12.0",
+    "three": "^0.169.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "gsap": "3.12",
     "svelte-spa-router": "^4.0.1"
   }
 }
